--- a/Livretter.html
+++ b/Livretter.html
@@ -110,11 +110,11 @@
 	<!-- logo -->
 	<div class="logotop">
 		<a href="http://www.urtekram.msfh.dk"></a>
-		<img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
+		<a href="index.html"><img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
 	</div>
 
 	<!-- login-ikon -->
-	<a href="#""http://Opskrifter.html.dk"><img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+	<a href="Opskrifter.html"><img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine"></a>
 		<div id="blaa"></div>
 		<div id="hvid"></div>
 
@@ -122,7 +122,7 @@
 		<!--velkomst -->
 		<section id="Overskrift">
 			<article class="personlig">
-				<h3 id="hilsen">Familiens favoritter</h3>
+				<h3 id="hilsen">Familiens livretter</h3>
 			</article>
 		</section>
 
@@ -131,10 +131,10 @@
 		<section class="teaser">
 			<article class="beskrivelse">
 				<picture>
-					<a href="#""https://www.pasta.html"><img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo"></a>
+				 <img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo">
 				</picture>
 				<div id="kasse">
-				<h4 id="teasertekst1">Pasta Alfredo</h4>
+				<a href="pasta.html"><h4 id="teasertekst1">Pasta Alfredo</h4></a>
 			</div>
 			</article>
 		</section>
@@ -145,8 +145,11 @@
 			<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
 			<article id="kontakt">
 				<h3>Kontakt</h3>
+				<h4>Telefon</h4>
+				<h4>E-mail</h4>
+				<h4>Forhandler</h4>
 				<h4>FAQ</h4>
-				<h4>Nyhedsbrev</h4>
+				<h4>Nyheder</h4>
 				<h4>Privatliv og Cookies</h4>
 			</article>
 
