--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</section>
 
 	<!-- login-ikon -->
-	<a href="https://www.Opskrifter.html.dk"> <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+	<a href="Opskrifter.html"> <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
 
 		<section id="hvid"></section>
 
@@ -121,10 +121,12 @@
 	<div id="blaa"></div>
 
 		<!-- Emballagebillede -->
-		<a href=".html"><img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
+		<a href="Fettuccine.html"><img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
 
 
 		<!-- Artikel -->
+		<div id="bordet"></div>
+
 		<article id="Fettuccine">
 			<p id="em">Her hos Urtekram elsker vi pasta,</p>
 			<p id="overraskelse">og det kan ikke komme som nogle overraskelse,
@@ -146,10 +148,18 @@
 		</section>
 
 		<!-- Glutenfri pastakursus -->
-		<section class="Glutenfri">
-
-			<h2> Glutenfri pastakursus </h2>
+		<section id="Glutenfri">
+			<article class="fri">
+			<h2 id="gk">Glutenfri</h2>
+			<h2 id="kur">pastakursus</h2>
+		<picture>
+			<img src="image/making.jpg" alt="Pastakursus" id="Gluten">
+	 </picture>
+ </article>
 		</section>
+
+
+
 
 
 		<!-- Familiefavoritter -->
@@ -179,7 +189,7 @@
 				<h4 id="teasertekst1">Pasta Alfredo</h4>
 			</article>
 			<article class="Opskrift">
-				<a href="#""https://www.pasta.html.dk"><h5 id="her1">Få opskriften her</h5></a>
+				<a href="#""www.pasta.html"><h5 id="her1">Få opskriften her</h5></a>
 			</article>
 		</section>
 
@@ -204,8 +214,11 @@
 			<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
 			<article id="kontakt">
 				<h3>Kontakt</h3>
+				<h4>Telefon</h4>
+				<h4>E-mail</h4>
+				<h4>Forhandler</h4>
 				<h4>FAQ</h4>
-				<h4>Nyhedsbrev</h4>
+				<h4>Nyheder</h4>
 				<h4>Privatliv og Cookies</h4>
 			</article>
 
