--- a/pasta.html
+++ b/pasta.html
@@ -98,7 +98,7 @@
   <!-- logo -->
   <div class="logotop">
     <a href="http://www.urtekram.msfh.dk">
-      <a href="#""https://www.index.html"><img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
+      <a href="index.html"><img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
   </div>
 
   <!-- login-ikon -->
@@ -172,8 +172,11 @@
     <a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
     <article id="kontakt">
       <h3>Kontakt</h3>
+      <h4>Telefon</h4>
+      <h4>E-mail</h4>
+      <h4>Forhandler</h4>
       <h4>FAQ</h4>
-      <h4>Nyhedsbrev</h4>
+      <h4>Nyheder</h4>
       <h4>Privatliv og Cookies</h4>
     </article>
 
