--- a/Fettuccine.html
+++ b/Fettuccine.html
@@ -175,8 +175,11 @@
     <a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
     <article id="kontakt">
       <h3>Kontakt</h3>
+      <h4>Telefon</h4>
+      <h4>E-mail</h4>
+      <h4>Forhandler</h4>
       <h4>FAQ</h4>
-      <h4>Nyhedsbrev</h4>
+      <h4>Nyheder</h4>
       <h4>Privatliv og Cookies</h4>
     </article>
 
