--- a/Opskrifter.html
+++ b/Opskrifter.html
@@ -132,7 +132,7 @@
 	<!-- kasse 1 -->
 	<section id="familiens">
 		<article class="boks1">
-			<h2 id="FL">Familiens livretter</h2>
+	<a href="Livretter.html"><h2 id="FL">Familiens livretter</h2></a>
 		</article>
 	</section>
 
@@ -163,8 +163,11 @@
 		<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
 		<article id="kontakt">
 			<h3>Kontakt</h3>
+			<h4>Telefon</h4>
+			<h4>E-mail</h4>
+			<h4>Forhandler</h4>
 			<h4>FAQ</h4>
-			<h4>Nyhedsbrev</h4>
+			<h4>Nyheder</h4>
 			<h4>Privatliv og Cookies</h4>
 		</article>
 
