--- a/Fettuccine.html
+++ b/Fettuccine.html
@@ -142,12 +142,12 @@
   <section class="teaser">
     <article class="beskrivelse">
       <picture>
-        <a href="#" "https://www.pasta.html"><img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo"></a>
+        <img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo">
       </picture>
-      <h4 id="teasertekst1">Pasta Alfredo</h4>
+      <a href="pasta.html"><h4 id="teasertekst1">Pasta Alfredo</h4></a>
     </article>
     <article class="Opskrift">
-    <a href="#" "https://www.pasta.html"><h5 id="her1"> Få opskriften her</h5></a>
+    <a href="pasta.html"><h5 id="her1"> Få opskriften her</h5></a>
     </article>
   </section>
 
@@ -155,7 +155,7 @@
   <section class="teaser">
     <article class="beskrivelse">
       <picture>
-        <a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks"></a>
+       <img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks">
       </picture>
       <h4 id=teasertekst3>Pasta med laks</h4>
     </article>
