--- a/Fettuccine.html
+++ b/Fettuccine.html
@@ -7,7 +7,7 @@
   <title>Urtekram</title>
   <meta name="author" content="Your Name">
   <meta name="description" content="Example">
-  <meta name="keywords" content="Urtekram, pasta, Fettuccine, opskrifter, pastaopskrifter, Pasta Alfredo">
+  <meta name="keywords" content="Urtekram, pasta, Fettuccine, emballage, produkt">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style5.css">
 
