--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="Urtekram, Urtekram fettuccine, pasta, Fettuccine">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style6.css">
 
 	<!--ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="image/Urtekramlogo.svg" />
@@ -100,7 +101,7 @@
 	<!-- burgermenu -->
 
 	<div class="burgermenu">
-		<label for="dropdown" class="dropdownbar"> ☰ </label>
+		<label id="dropdown" class="dropdownbar"> ☰ </label>
 	</div>
 
 
